--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lodash": "4.17.4"
   },
   "devDependencies": {
-    "electron": "^1.7.8",
+    "electron": "1.8.2",
     "requirejs": "2.3.5",
     "utils": "0.3.1"
   },
